# smol

./: Cargo.toml  Rocket.toml  diesel.toml  sample.env
migrations/: 20220525145615_url.sql  20220529143528_save-slug.sql
migrations/2022-05-24-060944_create_url_table/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs  url_controller.rs
src/dao/: mod.rs  url_dao.rs
src/database/: mod.rs
src/models/: mod.rs  url.rs
src/routes/: index.rs  mod.rs  shorten.rs
src/schema/: mod.rs
src/url_shortener/: mod.rs
