[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rocket = "0.4.10"
