[package]
name = "smol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
dotenv = "0.15.0"
env_logger = "0.9.0"
log="0.4.17"
rand = "0.8.5"
rocket = "0.5.0-rc.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls", "uuid" ] }
tokio = { version = "1", features = ["full"] }
